linkerd/peer-authentication.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  annotations:
    linkerd.io/inject: enabled
    config.linkerd.io/default-inbound-policy: all-authenticated
  labels:
    linkerd.io/extension: viz
