linkerd/mtls.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: sleep
  name: sleep
spec:
  containers:
  - image: alpine
    name: sleep
    args:
      - sh
      - -c
      - sleep 100000
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  containers:
  - image: kong/httpbin
    name: httpbin
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
